# server/model/response/sys_authority.go
@@ -1,0 +1,13 @@
+package response
+
+import "server/model"
+
+type SysAuthorityResponse struct {
+	Authority model.SysAuthority `json:"authority"`
+}
+
+type SysAuthorityCopyResponse struct {
+	Authority      model.SysAuthority `json:"authority"`
+	OldAuthorityId string             `json:"oldAuthorityId"`
+}
+
