# server/model/sys_authority.go
@@ -1,0 +1,12 @@
+package model
+
+import "time"
+
+type SysAuthority struct {
+	CreatedAt       time.Time
+	UpdatedAt       time.Time
+	DeletedAt       *time.Time     `sql:"index"`
+	AuthorityId     string         `json:"authorityId" gorm:"not null;unique;primary_key;comment:角色ID;size:90"`
+	AuthorityName   string         `json:"authorityName" gorm:"comment:角色名"`
+	ParentId        string         `json:"parentId" gorm:"comment:父角色ID"`
+}
