# server/utils/verify.go
@@ -2,4 +2,5 @@ package utils
 
 var (
 	AuthorityIdVerify = Rules{"AuthorityId": {NotEmpty()}}
+	AuthorityVerify   = Rules{"AuthorityId": {NotEmpty()}, "AuthorityName": {NotEmpty()}, "ParentId": {NotEmpty()}}
 )
